fix: change portrait aligning

--- a/src/components/Game/ContentCardComplexHeader/ContentCardComplexHeader.module.scss
+++ b/src/components/Game/ContentCardComplexHeader/ContentCardComplexHeader.module.scss
@@ -5,6 +5,10 @@
 	column-gap: 10px;
 }
 
+.portrait {
+	margin-top: 4px;
+}
+
 .playerName {
   font: 700 .875rem var(--font-nunito);
   line-height: 1.36rem;
