--- a/src/components/Game/ContentCardSimple/ContentCardSimple.module.scss
+++ b/src/components/Game/ContentCardSimple/ContentCardSimple.module.scss
@@ -20,6 +20,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+	align-items: flex-end;
 }
 
 .playerName {
